@@ -4,6 +4,15 @@
 \title{DPQ News}
 \encoding{UTF-8}
 
+\section{Version 0.5-5 (2023-06-16, svn r262)}{
+  \subsection{Misc}{
+    \itemize{
+      \item A new \command{flang} Fortran compiler does not know outdated
+      \code{derfc()}, but needs current standard \code{erfc()}.
+    }
+  }
+}
+  
 \section{Version 0.5-4 (2023-04-12, svn r261)}{
   \subsection{NEW FEATURES}{
     \itemize{
